--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,7 @@
                 android:name=".VPNService"
                 android:permission="android.permission.BIND_VPN_SERVICE"
                 android:enabled="true"
-                android:exported="true">
-            <intent-filter>
-                <action android:name="android.net.VpnService"/>
-            </intent-filter>
-        </service>
+                android:exported="true"/>
 
         <activity android:name=".MainActivity">
             <intent-filter>
